--- a/index.html
+++ b/index.html
@@ -83,8 +83,16 @@
     position: fixed; top: 64px; left: 0; right: 0; bottom: 0; z-index: 99;
     background: rgba(13,59,46,0.98);
     overflow-y: auto;
-    padding: 1rem 0 2rem;
+    -webkit-overflow-scrolling: touch;
+    padding: 0.5rem 0 3rem;
     flex-direction: column;
+    transform: translateY(-8px);
+    opacity: 0;
+    transition: transform 0.25s ease, opacity 0.25s ease;
+  }
+  .mobile-menu.open {
+    transform: translateY(0);
+    opacity: 1;
   }
   .mobile-menu.open { display: flex; }
   .mobile-menu a {
@@ -392,6 +400,29 @@
   .clock-date { font-size: 0.62rem; color: rgba(255,255,255,0.55); margin-top: 4px; letter-spacing: 0.03em; }
   .clock-wita { font-size: 0.6rem; font-weight: 700; letter-spacing: 0.1em; color: var(--gold); text-transform: uppercase; margin-top: 2px; }
 
+  /* ─── FLOATING QR ─── */
+  .floating-qr {
+    position: fixed; bottom: 24px; left: 24px; z-index: 99;
+    background: var(--white);
+    border: 1.5px solid rgba(201,168,76,0.5);
+    border-radius: 12px;
+    padding: 6px;
+    box-shadow: 0 6px 24px rgba(0,0,0,0.18);
+    cursor: grab;
+    user-select: none;
+    touch-action: none;
+    width: 68px;
+    transition: box-shadow 0.2s;
+  }
+  .floating-qr:active { cursor: grabbing; box-shadow: 0 10px 32px rgba(0,0,0,0.28); }
+  .floating-qr img { width: 56px; height: 56px; display: block; border-radius: 6px; pointer-events: none; }
+  .floating-qr .fqr-label {
+    font-size: 0.48rem; font-weight: 700; letter-spacing: 0.06em;
+    text-transform: uppercase; text-align: center;
+    color: var(--green-bright); margin-top: 4px;
+    line-height: 1.2;
+  }
+
   /* ─── POPUP ─── */
   .popup-overlay { display: none; position: fixed; inset: 0; z-index: 999; background: rgba(0,0,0,0.55); backdrop-filter: blur(4px); align-items: center; justify-content: center; }
   .popup-overlay.show { display: flex; }
@@ -440,6 +471,12 @@
   <div class="clock-time" id="clockTime">00:00:00</div>
   <div class="clock-date" id="clockDate"></div>
   <div class="clock-wita">WITA</div>
+</div>
+
+<!-- FLOATING QR CODE -->
+<div class="floating-qr" id="floatingQr">
+  <img src="https://storage3.me-qr.com/qr/314499113.png?v=1772068802" alt="QR Website Musholla">
+  <div class="fqr-label">Scan<br>Website</div>
 </div>
 
 <body>
@@ -748,16 +785,6 @@
         <div class="info-card"><span class="ic">📞</span><div><div class="it">Kontak Pengurus</div><div class="iv">Hubungi Ketua RT.003 RW.002 untuk informasi lebih lanjut</div></div></div>
         <a href="https://maps.app.goo.gl/1aDRve8YeWLAQGQs6" target="_blank" class="maps-btn">🗺️ Buka di Google Maps</a>
 
-        <!-- QR Code Website -->
-        <div style="margin-top:1.5rem;background:var(--cream);border:1.5px solid var(--cream-dark);border-radius:14px;padding:20px;text-align:center;">
-          <div style="font-size:0.7rem;font-weight:700;letter-spacing:0.1em;text-transform:uppercase;color:var(--green-bright);margin-bottom:10px;">📱 Scan QR Code</div>
-          <img src="https://storage3.me-qr.com/qr/314499113.png?v=1772068802"
-               alt="QR Code Website Musholla Baiturrahman"
-               style="width:160px;height:160px;border-radius:8px;display:block;margin:0 auto;image-rendering:crisp-edges;">
-          <div style="margin-top:10px;font-size:0.78rem;color:var(--text-mid);line-height:1.6;">
-            Scan untuk membuka<br>website Musholla Baiturrahman
-          </div>
-        </div>
       </div>
       <div class="maps-frame">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d998.1947610502193!2d115.95074503628815!3d-3.472972488145664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2de8b7005adee33d%3A0xce3f248ec4ad996f!2sMusholla%20Baiturrahman!5e1!3m2!1sid!2sid!4v1771916320194!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -949,6 +976,49 @@
   window.closeHadisPopup=function(e){ if(e.target===document.getElementById('hadisPopup')){ document.getElementById('hadisPopup').classList.remove('show'); document.body.style.overflow=''; } };
   window.showTataCaraPopup=function(){ document.getElementById('tataCaraPopup').classList.add('show'); document.body.style.overflow='hidden'; };
   window.closeTataCaraPopup=function(e){ if(e.target===document.getElementById('tataCaraPopup')){ document.getElementById('tataCaraPopup').classList.remove('show'); document.body.style.overflow=''; } };
+  /* ── Draggable QR ── */
+  (function(){
+    var el = document.getElementById('floatingQr');
+    var isDragging = false, startX, startY, origX, origY;
+
+    function getPos(e){ return e.touches ? e.touches[0] : e; }
+
+    el.addEventListener('mousedown', onStart);
+    el.addEventListener('touchstart', onStart, {passive:true});
+
+    function onStart(e){
+      var p = getPos(e);
+      isDragging = true;
+      startX = p.clientX; startY = p.clientY;
+      origX = el.offsetLeft; origY = el.offsetTop;
+      el.style.transition = 'none';
+      document.addEventListener('mousemove', onMove);
+      document.addEventListener('touchmove', onMove, {passive:false});
+      document.addEventListener('mouseup', onEnd);
+      document.addEventListener('touchend', onEnd);
+    }
+    function onMove(e){
+      if(!isDragging) return;
+      if(e.cancelable) e.preventDefault();
+      var p = getPos(e);
+      var dx = p.clientX - startX, dy = p.clientY - startY;
+      var newX = origX + dx, newY = origY + dy;
+      /* Batas layar */
+      newX = Math.max(0, Math.min(window.innerWidth - el.offsetWidth, newX));
+      newY = Math.max(0, Math.min(window.innerHeight - el.offsetHeight, newY));
+      el.style.left = newX + 'px';
+      el.style.top  = newY + 'px';
+      el.style.bottom = 'auto'; el.style.right = 'auto';
+    }
+    function onEnd(){
+      isDragging = false;
+      el.style.transition = 'box-shadow 0.2s';
+      document.removeEventListener('mousemove', onMove);
+      document.removeEventListener('touchmove', onMove);
+      document.removeEventListener('mouseup', onEnd);
+      document.removeEventListener('touchend', onEnd);
+    }
+  })();
 })();
 </script>
 </body>
